Closed
Bug 1681769
Opened 5 years ago
Closed 4 years ago
In-process MessageChannel connections not correctly setting pids, causing crashes in IPC logging
Categories
(Core :: Graphics: Layers, defect)
Core
Graphics: Layers
Tracking
()
RESOLVED
FIXED
91 Branch
Tracking | Status | |
---|---|---|
firefox91 | --- | fixed |
People
(Reporter: bugzilla, Assigned: bugzilla)
Details
Attachments
(1 file)
STR:
Start Fenix with logging for PUiCompositorControllerParent
enabled.
From what I can see, we're calling UiCompositorControllerChild::OpenForSameProcess
. The pid is set correctly in the child actor, but it is not propagated to the parent actor. When logging PUiCompositorControllerParent
, that code calls OtherPid
and we release assert.
Comment 1•5 years ago
|
||
Looking at InProcessParent::Startup() , maybe it is the responsibility of UiCompositorControllerParent to call SetOtherProcessId()?
Comment 2•5 years ago
|
||
Maybe it could be done in UiCompositorControllerParent::InitializeForSameProcess().
Assignee | ||
Comment 3•4 years ago
|
||
I'll take this.
Assignee: nobody → aklotz
Status: NEW → ASSIGNED
Component: IPC → Graphics: Layers
Assignee | ||
Comment 4•4 years ago
|
||
If we don't set UiCompositorControllerParent
's other pid during in-process
initialization, we release assert when trying to log IPDL traffic via
MOZ_IPC_MESSAGE_LOG
.
Pushed by aklotz@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/9bf6a4637ee8
Set UiCompositorControllerParent's "other" pid when initializing for in-process; r=botond
Comment 6•4 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
status-firefox91:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 91 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•