Bug 1681769: Set UiCompositorControllerParent's "other" pid when initializing for in-process; r=botond

If we don't set `UiCompositorControllerParent`'s other pid during in-process
initialization, we release assert when trying to log IPDL traffic via
`MOZ_IPC_MESSAGE_LOG`.

Differential Revision: https://phabricator.services.mozilla.com/D116271