gfx/layers/ipc/UiCompositorControllerParent.cpp
@@ -249,6 +249,7 @@ void UiCompositorControllerParent::InitializeForSameProcess() {
   // This function is called by UiCompositorControllerChild in the main thread.
   // So dispatch to the compositor thread to Initialize.
   if (!CompositorThreadHolder::IsInCompositorThread()) {
+    SetOtherProcessId(base::GetCurrentProcId());
     SynchronousTask task(
         "UiCompositorControllerParent::InitializeForSameProcess");
 
